--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,9 +1,51 @@
 .content {
+    max-width: 500px;
     text-align: center;
-    width: 300px;
-}
-.balance {
-    &__text {
-        color: blue;
+    margin: auto;
+
+    &__balance {
+        &__text {
+            color: blue;
+        }
+    }
+
+    &__expense {
+        &__box {
+            width: 200px;
+            display: inline-block;
+        }
+
+    }
+
+    &__date {
+        vertical-align: middle;
+
+        &__box {
+            display: inline-block;
+            width: 200px
+        }
+
+        &__text {
+            margin: 5px;
+        }
+    }
+
+    &__transaction {
+        display: inline-block;
+    }
+
+    &__category {
+        margin: 5px;
+    }
+
+    &__button {
+        &__add {
+            margin: 5px;
+        }
+
+        &__more {
+            margin: 5px;
+        }
     }
 }
+
