--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -7,6 +7,7 @@ $line-margin: 5px 0 0 0;
 
     &__balance {
         margin: $line-margin;
+        font-weight: bold;
     }
 
     &__expense {
@@ -19,7 +20,10 @@ $line-margin: 5px 0 0 0;
 
         &__text {
             display: inline-block;
-            width: 100px;
+            width: 110px;
+            position: relative;
+            top: 7px;
+            font-weight: bold;
         }
 
     }
@@ -34,7 +38,10 @@ $line-margin: 5px 0 0 0;
 
         &__text {
             display: inline-block;
-            width: 100px;
+            width: 110px;
+            position: relative;
+            top: 7px;
+            font-weight: bold;
         }
     }
 
@@ -48,7 +55,10 @@ $line-margin: 5px 0 0 0;
 
         &__text {
             display: inline-block;
-            width: 100px;
+            width: 110px;
+            position: relative;
+            top: 7px;
+            font-weight: bold;
         }
 
         &__dropdown {
