--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,4 +1,4 @@
-$line-margin: 5px 0 0 0;
+$line-margin: 10px 0 0 0;
 
 .content {
     max-width: 400px;
@@ -8,6 +8,26 @@ $line-margin: 5px 0 0 0;
     &__balance {
         margin: $line-margin;
         font-weight: bold;
+
+        &__dropdown {
+            display: inline-block;
+        }
+        
+        .field {
+            margin: 0;
+        }
+
+        &__transaction__link {
+            display: inline-block;
+            position: relative;
+            top: 8px;
+            left: 10px;
+        }
+
+        &__text {
+            display: block;
+            margin-bottom: 10px;
+        }
     }
 
     &__expense {
@@ -45,11 +65,6 @@ $line-margin: 5px 0 0 0;
         }
     }
 
-    &__transaction {
-        display: inline-block;
-        margin: $line-margin;
-    }
-
     &__category {
         margin: $line-margin;
 
@@ -70,12 +85,12 @@ $line-margin: 5px 0 0 0;
         margin: $line-margin;
         &__add {
             width: 100px;
-            margin: 0 5px 0 0;
+            margin: 0 10px 0 0;
         }
 
         &__more {
             width: 100px;
-            margin: 0 5px 0 0;
+            margin: 0 10px 0 0;
         }
     }
 }
