--- a/src/container/App.scss
+++ b/src/container/App.scss
@@ -5,8 +5,7 @@ html {
 }
 
 body {
-    height: 100%;
     margin: 0;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-size: cover;
 }
