--- a/src/components/More.scss
+++ b/src/components/More.scss
@@ -15,23 +15,35 @@
   }
 
   &__category {
+    @include line-margin();
+
     &__title {
       @include title-center();
     }
+
     &__dropdown {
       position: relative;
-      margin-left: 10px;
+      margin-left: 20px;
       display: inline-block;
     }
   }
 
   &__transaction {
+    @include line-margin();
+
     &__from {
       &__title {
         @include title-center();
       }
+
       &__dropdown {
+        position: relative;
         display: inline-block;
+        margin-left: 50px;
+      }
+
+      &__balance {
+        @include title-center();
       }
     }
 
@@ -39,40 +51,62 @@
       &__title {
         @include title-center();
       }
+
       &__dropdown {
+        position: relative;
         display: inline-block;
+        margin-left: 70px;
+      }
+
+      &__balance {
+        @include title-center();
       }
     }
   }
 
   &__date {
+    @include line-margin();
+
     &__title {
       @include title-center();
     }
+
     &__box {
+      position: relative;
       display: inline-block;
       width: 200px;
+      margin-left: 58px;
     }
   }
 
   &__amount {
+    @include line-margin();
+
     &__title {
       @include title-center();
     }
+
     &__box {
+      position: relative;
       display: inline-block;
       width: 200px;
+      margin-left: 33px;
     }
   }
 
   &__description {
+    @include line-margin();
+
     &__title {
       @include title-center();
     }
+
     &__box {
+      position: relative;
       display: inline-block;
       width: 200px;
       height: 100px;
+      margin-left: 2px;
     }
   }
 }
