Fixing some bugs

--- a/src/components/More.scss
+++ b/src/components/More.scss
@@ -111,6 +111,7 @@
             display: inline-block;
             width: 200px;
             height: 100px;
+            resize: none;
         }
     }
 }
