--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,27 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap");
+
 html {
     overflow-y: unset;
     min-height: 100%;
-    background: linear-gradient(180deg, rgba(246, 237, 178, 0.6), rgba(245, 152, 168, 0.6));
+    background: linear-gradient(
+        180deg,
+        rgba(246, 237, 178, 0.6),
+        rgba(245, 152, 168, 0.6)
+    );
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
     height: 100%;
     background-repeat: no-repeat;
     background-attachment: scroll;
+}
+
+body,
+button,
+input,
+select,
+textarea {
+    font-family: "Poppins", sans-serif;
 }
