--- a/src/components/More.scss
+++ b/src/components/More.scss
@@ -12,12 +12,16 @@
     max-width: 400px;
     margin: auto;
 
-    @include mobile-portrait {
-        margin-left: 5px;
+    .tabs {
+        margin-bottom: 10px;
+
+        ul {
+            margin: 0;
+        }
     }
 
-    &__backIcon {
-        margin: 5px auto;
+    @include mobile-portrait {
+        margin-left: 5px;
     }
 
     &__category {
