--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap");
 html {
     overflow-y: unset;
     min-height: 100%;
@@ -24,5 +23,5 @@ button,
 input,
 select,
 textarea {
-    font-family: "Roboto", sans-serif;
+    font-family: "Quicksand", sans-serif;
 }
