--- a/src/index.scss
+++ b/src/index.scss
@@ -2,8 +2,12 @@
 html {
     // overflow-y: unset;
     // min-height: 100%;
-    background-size: cover;
     background-image: url("./assets/pics/background.webp");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center center;
+
     // background: linear-gradient(
     //     180deg,
     //     rgba(246, 237, 178, 0.6),
