--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 html {
     // overflow-y: unset;
     // min-height: 100%;
-    background-image: url("./assets/pics/background.webp");
+    background-image: url("./assets/pics/background.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
