--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -1,7 +1,4 @@
-.layout {
-    max-width: 400px;
-    margin: auto;
-}
+@import "bulma/sass/utilities/initial-variables";
 
 .header {
     margin: 10px 5px;
@@ -14,5 +11,18 @@
 
     &__signOut {
         float: right;
+    }
+}
+
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 0;
+    background-color: unset;
+    font-weight: bold;
+    font-size: $size-7;
+    a {
+        color: $white;
     }
 }
