--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -3,6 +3,8 @@
 .header {
     background-color: $white;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    margin-top: 12px;
+    padding-left: 10px;
 }
 
 .footer {
