--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,95 +1,20 @@
 @import "_base.scss";
 
 .content {
-    @include mobile-portrait {
-        margin-left: 5px;
-    }
-
-    &__balance {
-        @include line-margin();
-        font-weight: bold;
-
-        &__dropdown {
-            display: inline-block;
-        }
-
-        .field {
-            margin: 0;
-        }
-
-        &__transaction__link {
-            display: inline-block;
-            position: relative;
-            top: 8px;
-            left: 10px;
-        }
-
-        &__text {
-            display: block;
-            margin-bottom: 10px;
-        }
-    }
-
-    &__expense {
-        @include line-margin();
-
-        &__box {
-            display: inline-block;
-            width: 200px;
-        }
-
-        &__text {
-            display: inline-block;
-            width: 120px;
-            position: relative;
-            top: 7px;
-            font-weight: bold;
-        }
-    }
-
-    &__date {
-        @include line-margin();
-
-        &__box {
-            display: inline-block;
-            width: 200px;
-        }
-
-        &__text {
-            display: inline-block;
-            width: 120px;
-            position: relative;
-            top: 7px;
-            font-weight: bold;
-        }
-    }
-
-    &__category {
-        @include line-margin();
-
-        &__text {
-            display: inline-block;
-            width: 120px;
-            position: relative;
-            top: 7px;
-            font-weight: bold;
-        }
-
-        &__dropdown {
-            display: inline-block;
+    &__hero {
+        .inline {
+            display: inline;
         }
     }
 
     &__button {
         @include line-margin();
-        &__add {
+        &--add {
             width: 100px;
-            margin: 0 10px 0 0;
         }
 
-        &__more {
+        &--more {
             width: 100px;
-            margin: 0 10px 0 0;
         }
     }
 }
