:lipstick: Fix home and layout

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -5,6 +5,16 @@
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     margin-top: 12px;
     padding-left: 10px;
+
+    &__title {
+        vertical-align: text-bottom;
+    }
+}
+
+.menu {
+    &__totalBalance {
+        text-align: right;
+    }
 }
 
 .footer {
