--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ html {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
+    overflow-x: hidden;
 }
 
 html,
