--- a/src/index.scss
+++ b/src/index.scss
@@ -5,14 +5,10 @@ html {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
-    overflow-x: hidden;
 }
 
-html,
-body,
-button,
-input,
-select,
-textarea {
+body {
+    overflow-x: hidden;
     font-family: "Quicksand", sans-serif;
+    height: 100vh;
 }
