--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
+
 html {
     background-image: url("./assets/pics/background.jpg");
     background-size: cover;
@@ -9,6 +10,6 @@ html {
 
 body {
     overflow-x: hidden;
-    font-family: "Quicksand", sans-serif;
+    font-family: "Raleway", sans-serif;
     height: 100vh;
 }
