:lipstick: pointer signout

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -15,6 +15,11 @@
     &__totalBalance {
         text-align: right;
     }
+    &-label {
+        &__signout {
+            cursor: pointer;
+        }
+    }
 }
 
 .footer {
