--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,14 @@ html {
 
 body {
     overflow-x: hidden;
-    font-family: "Raleway", sans-serif;
     height: 100vh;
+}
+
+body,
+button,
+input,
+optgroup,
+select,
+textarea {
+    font-family: "Raleway", sans-serif;
 }
