--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
 
 html {
-    background-image: url("./assets/pics/background.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: white;
 }
 
 body {
