:lipstick: change font

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap");
 
 html {
     background-color: #d9e4f5;
@@ -16,5 +16,5 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: "Raleway", sans-serif;
+    font-family: "Manrope", sans-serif;
 }
