--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,10 @@ html {
     background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
 }
 
+html,
 body {
     overflow-x: hidden;
-    height: 100vh;
+    height: 100%;
 }
 
 body,
