--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap");
+@import 'bulma';
+@import '~bulma-switch';
 
 html {
     background-color: #d9e4f5;
