:lipstick: add line font

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap");
 @import 'bulma';
 @import '~bulma-switch';
+$line-seed-font-path: "./assets/fonts/line_seed";
+
+@font-face {
+    src: url("#{$line-seed-font-path}/LINESeedSans_W_Rg.woff2") format("woff2");
+
+    font-family: "LineSeedSans";
+    font-weight: 400;
+}
+
+@font-face {
+    src: url("#{$line-seed-font-path}/LINESeedSans_W_Bd.woff2") format("woff2");
+
+    font-family: "LineSeedSans";
+    font-weight: 700;
+}
+
+@font-face {
+    src: url("#{$line-seed-font-path}/LINESeedSans_W_XBd.woff2") format("woff2");
+
+    font-family: "LineSeedSans";
+    font-weight: 800;
+}
 
 html {
     background-color: #d9e4f5;
@@ -19,5 +41,5 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: "Manrope", sans-serif;
+    font-family: "LineSeedSans", sans-serif;
 }
