--- a/src/index.scss
+++ b/src/index.scss
@@ -5,21 +5,21 @@ $line-seed-font-path: "./assets/fonts/line_seed";
 
 @font-face {
     src: url("#{$line-seed-font-path}/LINESeedSans_W_Rg.woff2") format("woff2");
-
+    font-display: swap;
     font-family: "LineSeedSans";
     font-weight: 400;
 }
 
 @font-face {
     src: url("#{$line-seed-font-path}/LINESeedSans_W_Bd.woff2") format("woff2");
-
+    font-display: swap;
     font-family: "LineSeedSans";
     font-weight: 700;
 }
 
 @font-face {
     src: url("#{$line-seed-font-path}/LINESeedSans_W_XBd.woff2") format("woff2");
-
+    font-display: swap;
     font-family: "LineSeedSans";
     font-weight: 800;
 }
