--- a/src/index.scss
+++ b/src/index.scss
@@ -24,15 +24,16 @@ $line-seed-font-path: "./assets/fonts/line_seed";
     font-weight: 800;
 }
 
-html {
-    background-color: #d9e4f5;
-    background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
-}
+// html {
+//     background-color: #d9e4f5;
+//     background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
+// }
 
 html,
 body {
-    overflow-x: hidden;
-    height: 100%;
+    background-color: #fafafa;
+    // overflow-x: hidden;
+    // height: 100%;
 }
 
 body,
