--- a/src/index.scss
+++ b/src/index.scss
@@ -26,7 +26,14 @@ $line-seed-font-path: "./assets/fonts/line_seed";
 
 .radix-themes {
     --default-font-family: "LineSeedSans", sans-serif;
-    background-color: #fafafa;
+
+    .header {
+        background-color: #fafafa;
+    }
+
+    .mainContainer {
+        background-color: #fafafa;
+    }
 }
 
 html {
