--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,27 @@ $line-seed-font-path: "./assets/fonts/line_seed";
     font-weight: 800;
 }
 
+@font-face {
+    src: url("#{$line-seed-font-path}/LINESeedSansTH_W_Rg.woff2") format("woff2");
+    font-display: swap;
+    font-family: "LineSeedSans";
+    font-weight: 400;
+}
+
+@font-face {
+    src: url("#{$line-seed-font-path}/LINESeedSansTH_W_Bd.woff2") format("woff2");
+    font-display: swap;
+    font-family: "LineSeedSans";
+    font-weight: 700;
+}
+
+@font-face {
+    src: url("#{$line-seed-font-path}/LINESeedSansTH_W_XBd.woff2") format("woff2");
+    font-display: swap;
+    font-family: "LineSeedSans";
+    font-weight: 800;
+}
+
 .radix-themes {
     --default-font-family: "LineSeedSans", sans-serif;
 
